--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,33 @@
-h1,
-p {
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+table {
+  border: 1px solid #ddd;
+}
+
+thead {
+  background-color: grey;
+  color: white;
+}
+
+thead tr {
+  height: 40px;
+}
+
+thead th {
+  padding: 15px;
+  font-size: small;
+  font-weight: normal;
+}
+
+tbody {
+  background-color: white;
+  text-align: start;
+  height: 40px;
+}
+
+tbody td {
+  font-size: small;
 }
